[gd_scene load_steps=6 format=3 uid="uid://qy230vei6n8p"]

[ext_resource type="Script" uid="uid://jt41lox7ggvv" path="res://UI/LevelHUD/level_hud.gd" id="1_mal80"]
[ext_resource type="Resource" uid="uid://dvgo1u4245bj4" path="res://Config/Towers/bomb_tower_data.tres" id="2_3otiq"]
[ext_resource type="Resource" uid="uid://bojj6xdad27bq" path="res://Config/Towers/archer_tower_data.tres" id="3_ais3w"]
[ext_resource type="Resource" uid="uid://c5v3s0n3fxli3" path="res://Config/Towers/magic_tower_data.tres" id="4_rorbr"]
[ext_resource type="Theme" uid="uid://cva31h3i30ii7" path="res://Themes/hud_theme.tres" id="5_41t3o"]

[node name="LevelHUD" type="CanvasLayer"]
layer = 10
follow_viewport_enabled = true
script = ExtResource("1_mal80")
bomb_tower_data = ExtResource("2_3otiq")
archer_tower_data = ExtResource("3_ais3w")
magic_tower_data = ExtResource("4_rorbr")

[node name="StatsContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(200, 0)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -225.0
offset_top = 25.0
offset_right = -25.0
offset_bottom = 141.0
grow_horizontal = 0
theme = ExtResource("5_41t3o")

[node name="LabelContainer" type="VBoxContainer" parent="StatsContainer"]
layout_mode = 2

[node name="WaveLabel" type="Label" parent="StatsContainer/LabelContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Wave:"

[node name="HealthLabel" type="Label" parent="StatsContainer/LabelContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Health:"

[node name="CurrencyLabel" type="Label" parent="StatsContainer/LabelContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Gold:"

[node name="BuildButtonsGroup" type="MarginContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -437.0
offset_top = -213.0
offset_right = -25.0
offset_bottom = -25.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("5_41t3o")

[node name="Columns" type="HBoxContainer" parent="BuildButtonsGroup"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 2

[node name="MainButtons" type="VBoxContainer" parent="BuildButtonsGroup/Columns"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/separation = 12
alignment = 2

[node name="UpgradeButton" type="Button" parent="BuildButtonsGroup/Columns/MainButtons"]
visible = false
layout_mode = 2
text = "Upgrade"

[node name="SellTowerButton" type="Button" parent="BuildButtonsGroup/Columns/MainButtons"]
visible = false
layout_mode = 2
text = "Sell Tower"

[node name="NextWave" type="Button" parent="BuildButtonsGroup/Columns/MainButtons"]
layout_mode = 2
text = "Next Wave"
